# search_engine

./: .gitignore  CMakeLists.txt  README.md
configuration_files/: config.json  requests.json
file/: answers.json
include/: ConsoleOutput.h  ConverterJSON.h  EditorString.h  EngineException.h  GeneratorJsonAnswers.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt
src/: CMakeLists.txt  ConsoleOutput.cpp  ConverterJSON.cpp  EditorString.cpp  GeneratorJsonAnswers.cpp  InvertedIndex.cpp  SearchServer.cpp  TestInvertedIndexClass.cpp  TestSearchServerClass.cpp  main.cpp
